saturn-program-macros/tests/compile_fail/nested_modules.stderr
error[E0433]: failed to resolve: unresolved import
  --> tests/compile_fail/nested_modules.rs:28:9
   |
28 |     mod handlers {
   |         ^^^^^^^^ unresolved import
   |
help: a similar path exists
   |
28 |     mod outer::handlers {
   |         ~~~~~~~~~~~~~~~
help: consider importing this module
   |
11 +     use crate::outer::handlers::__private;
   |

error[E0433]: failed to resolve: unresolved import
  --> tests/compile_fail/nested_modules.rs:28:9
   |
28 |     mod handlers {
   |         ^^^^^^^^ unresolved import
   |
help: a similar path exists
   |
28 |     mod outer::handlers {
   |         ~~~~~~~~~~~~~~~
help: consider importing one of these items
   |
11 +     use crate::outer::handlers::__private::Instruction;
   |
11 +     use arch_program::instruction::Instruction;
   |

warning: unused import: `saturn_account_parser::Context`
 --> tests/compile_fail/nested_modules.rs:6:5
  |
6 | use saturn_account_parser::Context;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0080]: evaluation of constant value failed
  --> tests/compile_fail/nested_modules.rs:27:5
   |
27 |     #[saturn_program]
   |     ^^^^^^^^^^^^^^^^^ the evaluated program panicked at '#[saturn_program] does not support nested modules; all instruction handlers must live directly inside the annotated module', $DIR/tests/compile_fail/nested_modules.rs:27:5
   |
   = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)
